# CMakeQTExample

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ui/: CMakeLists.txt
ui/include/ui/: mainwindow.h  sampletablewidget.h
ui/src/: mainwindow.cpp  mainwindow.ui  sampletablewidget.cpp  sampletablewidget.ui
